[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/bird_blue_2.png" type="Texture" id=1]
[ext_resource path="res://images/diskette_icon.png" type="Texture" id=2]
[ext_resource path="res://images/bird_green_2.png" type="Texture" id=3]
[ext_resource path="res://images/bird_white_2.png" type="Texture" id=4]
[ext_resource path="res://scripts/settings_screen.gd" type="Script" id=5]
[ext_resource path="res://images/kolumna_red.png" type="Texture" id=6]
[ext_resource path="res://images/kolumna_green.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 0.673
margin_left = 299.692
margin_top = 197.656
margin_right = 501.692
margin_bottom = 322.656
rect_scale = Vector2( 5, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 182.0
margin_bottom = 112.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 182.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 71.0
margin_bottom = 18.0
text = "Bird Color: "

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 75.0
margin_right = 182.0
margin_bottom = 22.0
text = "Niebieski"
icon = ExtResource( 1 )
items = [ "Niebieski", ExtResource( 1 ), false, 0, null, "Bialy", ExtResource( 4 ), false, 1, null, "Zielony", ExtResource( 3 ), false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 182.0
margin_bottom = 62.0
alignment = 1

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 4.0
margin_top = 11.0
margin_right = 93.0
margin_bottom = 25.0
text = "Column color:"

[node name="OptionButton2" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 97.0
margin_right = 177.0
margin_bottom = 36.0
text = "Green"
icon = ExtResource( 7 )
items = [ "Green", ExtResource( 7 ), false, 0, null, "Red", ExtResource( 6 ), false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 182.0
margin_bottom = 86.0
alignment = 1

[node name="Button_del_hiscore" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 6.0
margin_right = 175.0
margin_bottom = 20.0
text = "Zresetuj zapisane wyniki"

[node name="HBoxContainer4" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 182.0
margin_bottom = 112.0
alignment = 1

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 12.0
margin_right = 83.0
margin_bottom = 22.0
text = "Zapisz"
icon = ExtResource( 2 )

[node name="Button2" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 87.0
margin_right = 170.0
margin_bottom = 22.0
text = "Nie zapisuj"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 442.638
margin_top = 36.0
margin_right = 493.638
margin_bottom = 50.0
rect_scale = Vector2( 10, 10 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
margin_left = 202.74
margin_top = 120.0
margin_right = 1343.74
margin_bottom = 760.0

[node name="Button" type="Button" parent="PopupDialog"]
margin_left = 160.231
margin_top = 409.126
margin_right = 226.231
margin_bottom = 437.126
rect_scale = Vector2( 5, 5 )
text = "TAK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="PopupDialog"]
margin_left = 674.68
margin_top = 409.881
margin_right = 740.68
margin_bottom = 437.881
rect_scale = Vector2( 5, 5 )
text = "NIE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupDialog"]
margin_left = 141.138
margin_top = 117.615
margin_right = 443.138
margin_bottom = 178.615
rect_scale = Vector2( 3, 3 )
text = "Czy na pewno chcesz usunac najwyzszy wynik? "
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer3/Button_del_hiscore" to="." method="_on_Button_del_hiscore_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer4/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer4/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="PopupDialog/Button" to="." method="_on_Button_yes_pressed"]
[connection signal="pressed" from="PopupDialog/Button2" to="." method="_on_Button2_yes_pressed"]
